# agentflow

./: .gitignore  AGENTFLOW_AGENT_CAPABILITY_MATRIX_V1.md  AGENTFLOW_EVENT_AND_PROJECTION_MODEL_V1.md  AGENTFLOW_PROJECT_OPERATING_SYSTEM_V1.md  AGENTFLOW_WORKFLOW_SCHEMA_V1.md  AGENTS.md  CHANGELOG.md  Cargo.toml  GOAL.md  README.md  ROADMAP.md  agentflow-task-workflow-yaml-runtime-v1.md  design.md  verification.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: graph.rs  main.rs  project_files.rs  project_workspace.rs
apps/desktop/src-tauri/src/commands/: agent_manual.rs  agentflow_watcher.rs  audit.rs  execute.rs  goal_tree.rs  graph.rs  input.rs  legacy_core.rs  mcp.rs  mod.rs  output.rs  panel.rs  project_files.rs  project_loop.rs  project_runtime.rs  project_workspace.rs  projection.rs  runtime_api.rs  spec.rs  state.rs  workflow_events.rs
apps/desktop/src-tauri/src/project_files/: commands.rs  content.rs  directory.rs  mime.rs  mod.rs  model.rs  range.rs  (+2 more)
crates/acceptance/: Cargo.toml
crates/acceptance/src/: acceptance.rs  boundaries.rs  browser_preview.rs  fixture.rs  lib.rs
crates/action-arbitration/: Cargo.toml
crates/action-arbitration/src/: arbitrator.rs  lib.rs  locks.rs  model.rs  reasons.rs  report.rs
crates/action-contract/: Cargo.toml
crates/action-contract/src/: core.rs  lib.rs  model.rs  registry.rs  report.rs  validation.rs
crates/agent-dispatcher/: Cargo.toml
crates/agent-dispatcher/src/: dispatcher.rs  lib.rs  model.rs
crates/agentflow-cli/: Cargo.toml
crates/agentflow-cli/src/: active.rs  args.rs  legacy.rs  main.rs  print.rs  retirement.rs
crates/audit/: Cargo.toml
crates/audit/src/: audit.rs  lib.rs  model.rs  storage.rs
crates/capability-registry/: Cargo.toml
crates/capability-registry/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: active.rs  args.rs  formal.rs  legacy.rs  main.rs  retirement.rs
crates/event-store/: Cargo.toml
crates/event-store/src/: lib.rs  model.rs  runtime.rs  storage.rs
crates/execute/: Cargo.toml
crates/execute/src/: checkpoint.rs  command.rs  completion.rs  delivery.rs  evidence.rs  launcher.rs  lease.rs  lib.rs  manager.rs  model.rs  patch.rs  plan.rs  preflight.rs  result.rs  storage.rs  validation.rs
crates/governance-policy/: Cargo.toml
crates/governance-policy/src/: lib.rs
crates/graph/: Cargo.toml
crates/graph/src/: context_pack.rs  db.rs  impact.rs  lib.rs  manager.rs  model.rs  parser.rs  parser_registry.rs  preflight.rs  protection.rs  scanner.rs  search.rs  test_recommendation.rs  watcher.rs
crates/graph/src/watcher/: fallback.rs  filter.rs  mod.rs  native.rs  state.rs  tests.rs
crates/input/: Cargo.toml
crates/input/src/: issue.rs  lib.rs  manager.rs  model.rs  project.rs  relations.rs  repair.rs  spec_gate.rs  storage.rs  validate.rs  views.rs
crates/loop/: Cargo.toml
crates/loop/src/: audit_gate.rs  direct_issue_loop.rs  error.rs  events.rs  issue_loop.rs  lib.rs  model.rs  project_executor.rs  project_loop.rs  review_state.rs  storage.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: browser.rs  claude.rs  codex.rs  error.rs  events.rs  github.rs  gitlab.rs  health.rs  lib.rs  model.rs  provider.rs  registry.rs  smoke.rs  storage.rs
crates/message-bus/: Cargo.toml
crates/message-bus/src/: lib.rs
crates/object-state/: Cargo.toml
crates/object-state/src/: core.rs  lib.rs  model.rs  registry.rs  report.rs  validation.rs
crates/projection/: Cargo.toml
crates/projection/src/: lib.rs  model.rs  projector.rs  query.rs  storage.rs
crates/release/: Cargo.toml
crates/release/src/: deployment.rs  lib.rs  model.rs  public_delivery.rs  review_surface.rs  runtime.rs
crates/role-policy/: Cargo.toml
crates/role-policy/src/: core.rs  lib.rs  model.rs  registry.rs  report.rs  validation.rs
crates/runtime-api/: Cargo.toml
crates/runtime-api/examples/: v112_product_execution_proofs.rs  v113_product_command_submit_proofs.rs  v114_product_workspace_proofs.rs  v115_spec_intake_productization_proofs.rs  v116_executor_real_execution_proofs.rs  v117_executor_readability_proofs.rs  v118_recovery_resume_failure_proofs.rs  v119_software_dev_beta_certification_proofs.rs  v120_product_onboarding_first_run_proofs.rs  v121_first_run_team_workflow_proofs.rs  v124_commercial_runtime_proofs.rs  v125_commercial_runtime_proofs.rs  v126_commercial_runtime_proofs.rs  v127_commercial_runtime_proofs.rs  v128_commercial_runtime_proofs.rs  v129_commercial_runtime_proofs.rs  v130_commercial_authority_boundary_proofs.rs  v130_commercial_backend_contract_proofs.rs  v130_commercial_e2e_golden_scenario_proofs.rs  v130_customer_delivery_backend_contract_proofs.rs  v130_paid_report_flow_state_machine_proofs.rs  v130_payment_provider_adapter_boundary_proofs.rs  v130_product_sku_extension_contract_proofs.rs  v130_provider_generator_adapter_boundary_proofs.rs  v130_release_certification_proofs.rs
crates/runtime-api/src/: api_plane.rs  commands.rs  commercial.rs  errors.rs  executor_adapter_real_execution.rs  formal.rs  handoff.rs  lib.rs  mapping.rs  pack.rs  product_onboarding.rs  product_workspace.rs  project_sharing.rs  query.rs  responses.rs  role_permission_handoff.rs  spec_intake_productization.rs  team_delivery_decision_history.rs  team_workflow.rs  work_proposals.rs  work_state.rs
crates/schema-registry/: Cargo.toml
crates/schema-registry/src/: lib.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: lib.rs
crates/spec/: Cargo.toml
crates/spec/src/: core_intake.rs  lib.rs  model.rs  storage.rs
crates/state/: Cargo.toml
crates/state/src/: events.rs  gates.rs  health.rs  indexes.rs  lib.rs  locks.rs  manager.rs  model.rs  readiness.rs  sessions.rs  storage.rs
crates/task-artifacts/: Cargo.toml
crates/task-artifacts/src/: lib.rs  model.rs  storage.rs
crates/task-loop/: Cargo.toml
crates/task-loop/src/: lib.rs  model.rs  scheduler.rs
crates/workflow-runtime/: Cargo.toml
crates/workflow-runtime/src/: lib.rs  locks.rs  model.rs  records.rs  runtime.rs  storage.rs
(+766 files in other folders)
