[workspace]
members = [
    "crates/cli",
    "crates/agent-manual",
    "crates/panel",
    "crates/spec",
    "crates/workflow-core",
    "crates/event-store",
    "crates/workflow-runtime",
    "crates/task-artifacts",
    "crates/task-loop",
    "crates/agent-dispatcher",
    "crates/projection",
    "crates/release",
    "crates/mcp",
    "crates/audit",
    "crates/state",
    "crates/acceptance",
    "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
