[workspace]
members = [
    "crates/cli",
    "crates/agent-manual",
    "crates/panel",
    "crates/spec",
    "crates/runtime-api",
    "crates/ontology",
    "crates/action-contract",
    "crates/role-policy",
    "crates/object-state",
    "crates/action-arbitration",
    "crates/workflow-core",
    "crates/schema-registry",
    "crates/simulation",
    "crates/event-store",
    "crates/workflow-runtime",
    "crates/task-artifacts",
    "crates/task-loop",
    "crates/capability-registry",
    "crates/governance-policy",
    "crates/agent-dispatcher",
    "crates/projection",
    "crates/release",
    "crates/mcp",
    "crates/message-bus",
    "crates/pack",
    "crates/audit",
    "crates/state",
    "crates/acceptance",
    "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
version = "1.3.2"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
globset = "0.4"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
toml = "0.8"
