[package]
name = "agentflow-workflow-acceptance"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
agentflow-agent-manual = { path = "../agent-manual" }
agentflow-panel = { path = "../panel" }
agentflow-audit = { path = "../audit" }
agentflow-event-store = { path = "../event-store" }
agentflow-projection = { path = "../projection" }
agentflow-spec = { path = "../spec" }
agentflow-state = { path = "../state" }
agentflow-task-artifacts = { path = "../task-artifacts" }
agentflow-workflow-core = { path = "../workflow-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true

[dev-dependencies]
agentflow-task-loop = { path = "../task-loop" }
