[package]
name = "agentflow-action-arbitration"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
agentflow-action-contract = { path = "../action-contract" }
agentflow-object-state = { path = "../object-state" }
agentflow-ontology = { path = "../ontology" }
agentflow-role-policy = { path = "../role-policy" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
