[package]
name = "agentflow-agent-dispatcher"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
agentflow-event-store = { path = "../event-store" }
agentflow-mcp = { path = "../mcp" }
agentflow-task-loop = { path = "../task-loop" }
agentflow-workflow-core = { path = "../workflow-core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
agentflow-spec = { path = "../spec" }
tempfile.workspace = true
