[package]
name = "agentflow-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "agentflow"
path = "src/main.rs"

[dependencies]
agentflow-core = { path = "../agentflow-core" }
agentflow-execute = { path = "../execute" }
agentflow-state = { path = "../state" }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
