[package]
name = "agentflow-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "agentflow"
path = "src/main.rs"

[dependencies]
agentflow-core = { path = "../agentflow-core" }
agentflow-execute = { path = "../execute" }
agentflow-input = { path = "../input" }
agentflow-loop = { path = "../loop" }
agentflow-state = { path = "../state" }
agentflow-workflow-events = { path = "../workflow-events" }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
