[package]
name = "agentflow-audit"
version = "0.2.0"
edition = "2021"

[dependencies]
agentflow-projection = { path = "../projection" }
agentflow-task-artifacts = { path = "../task-artifacts" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
