[package]
name = "agentflow-audit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentflow-task-artifacts = { path = "../task-artifacts" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
