[package]
name = "agentflow-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "agentflow"
path = "src/main.rs"

[dependencies]
agentflow-audit = { path = "../audit" }
agentflow-agent-dispatcher = { path = "../agent-dispatcher" }
agentflow-capability-registry = { path = "../capability-registry" }
agentflow-event-store = { path = "../event-store" }
agentflow-mcp = { path = "../mcp" }
agentflow-pack = { path = "../pack" }
agentflow-projection = { path = "../projection" }
agentflow-release = { path = "../release" }
agentflow-runtime-api = { path = "../runtime-api" }
agentflow-simulation = { path = "../simulation" }
agentflow-spec = { path = "../spec" }
agentflow-state = { path = "../state" }
agentflow-task-artifacts = { path = "../task-artifacts" }
agentflow-task-loop = { path = "../task-loop" }
agentflow-workflow-core = { path = "../workflow-core" }
anyhow.workspace = true
clap.workspace = true
globset.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
