[package]
name = "agentflow-event-store"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
agentflow-workflow-core = { path = "../workflow-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true
