[package]
name = "agentflow-execute"
version = "0.1.0"
edition = "2021"

[dependencies]
agentflow-agent-manual = { path = "../agent-manual" }
agentflow-input = { path = "../input" }
agentflow-panel = { path = "../panel" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
