[package]
name = "agentflow-graph"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tree-sitter = "0.26.9"
tree-sitter-c = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cpp = "0.23.4"
tree-sitter-dart = "0.2.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-swift = "0.7.3"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
tempfile.workspace = true
