[package]
name = "agentflow-loop"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
agentflow-input = { path = "../input" }
agentflow-execute = { path = "../execute" }
agentflow-mcp = { path = "../mcp" }
agentflow-output = { path = "../output" }
agentflow-panel = { path = "../panel" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
agentflow-agent-manual = { path = "../agent-manual" }
tempfile.workspace = true
