[package]
name = "agentflow-mcp"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
agentflow-event-store = { path = "../event-store" }
agentflow-projection = { path = "../projection" }
agentflow-workflow-core = { path = "../workflow-core" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
