[package]
name = "agentflow-projection"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
agentflow-event-store = { path = "../event-store" }
agentflow-spec = { path = "../spec" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
