[package]
name = "agentflow-projection"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
agentflow-audit = { path = "../audit" }
agentflow-event-store = { path = "../event-store" }
agentflow-ontology = { path = "../ontology" }
agentflow-pack = { path = "../pack" }
agentflow-release = { path = "../release" }
agentflow-spec = { path = "../spec" }
agentflow-task-artifacts = { path = "../task-artifacts" }
agentflow-workflow-runtime = { path = "../workflow-runtime" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
agentflow-workflow-core = { path = "../workflow-core" }
tempfile.workspace = true
