[package]
name = "agentflow-release"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
agentflow-audit = { path = "../audit" }
agentflow-event-store = { path = "../event-store" }
agentflow-spec = { path = "../spec" }
agentflow-workflow-core = { path = "../workflow-core" }
agentflow-workflow-runtime = { path = "../workflow-runtime" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
