[package]
name = "agentflow-schema-registry"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
agentflow-audit = { path = "../audit" }
agentflow-event-store = { path = "../event-store" }
agentflow-projection = { path = "../projection" }
agentflow-release = { path = "../release" }
agentflow-runtime-api = { path = "../runtime-api" }
agentflow-spec = { path = "../spec" }
agentflow-state = { path = "../state" }
agentflow-task-artifacts = { path = "../task-artifacts" }
agentflow-workflow-core = { path = "../workflow-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

