[package]
name = "agentflow-spec"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
agentflow-event-store = { path = "../event-store" }
agentflow-workflow-core = { path = "../workflow-core" }
agentflow-workflow-runtime = { path = "../workflow-runtime" }

[dev-dependencies]
tempfile.workspace = true
