[package]
name = "agentflow-spec"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
agentflow-audit = { path = "../audit" }
agentflow-event-store = { path = "../event-store" }
agentflow-task-artifacts = { path = "../task-artifacts" }
agentflow-workflow-core = { path = "../workflow-core" }
agentflow-workflow-runtime = { path = "../workflow-runtime" }

[dev-dependencies]
tempfile.workspace = true
