[package]
name = "agentflow-state"
version = "0.1.0"
edition = "2021"

[dependencies]
agentflow-agent-manual = { path = "../agent-manual" }
agentflow-audit = { path = "../audit" }
agentflow-event-store = { path = "../event-store" }
agentflow-panel = { path = "../panel" }
agentflow-projection = { path = "../projection" }
agentflow-spec = { path = "../spec" }
agentflow-task-artifacts = { path = "../task-artifacts" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
