[package]
name = "agentflow-state"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentflow-agent-manual = { path = "../agent-manual" }
agentflow-audit = { path = "../audit" }
agentflow-event-store = { path = "../event-store" }
agentflow-panel = { path = "../panel" }
agentflow-projection = { path = "../projection" }
agentflow-spec = { path = "../spec" }
agentflow-task-artifacts = { path = "../task-artifacts" }
agentflow-workflow-runtime = { path = "../workflow-runtime" }
agentflow-workflow-core = { path = "../workflow-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
