[package]
name = "agentflow-task-artifacts"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
agentflow-event-store = { path = "../event-store" }
agentflow-workflow-core = { path = "../workflow-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
