[package]
name = "agentflow-workflow-runtime"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
agentflow-action-arbitration = { path = "../action-arbitration" }
agentflow-action-contract = { path = "../action-contract" }
agentflow-event-store = { path = "../event-store" }
agentflow-task-artifacts = { path = "../task-artifacts" }
agentflow-workflow-core = { path = "../workflow-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
