[package]
name = "agentflow-desktop"
edition.workspace = true
license.workspace = true
version.workspace = true

[build-dependencies]
tauri-build = { version = "=2.4.0", features = [] }

[dependencies]
agentflow-core = { path = "../../../crates/core" }
agentflow-agent-manual = { path = "../../../crates/agent-manual" }
agentflow-panel = { path = "../../../crates/panel" }
agentflow-input = { path = "../../../crates/input" }
agentflow-mcp = { path = "../../../crates/mcp" }
agentflow-execute = { path = "../../../crates/execute" }
agentflow-loop = { path = "../../../crates/loop" }
agentflow-output = { path = "../../../crates/output" }
agentflow-state = { path = "../../../crates/state" }
agentflow-workflow-events = { path = "../../../crates/workflow-events" }
anyhow.workspace = true
base64 = "0.22"
notify = "8"
rfd = "0.15"
serde.workspace = true
serde_json.workspace = true
tauri = { version = "=2.8.4", features = [] }

[dev-dependencies]
agentflow-workflow-acceptance = { path = "../../../crates/acceptance" }
tempfile.workspace = true
