[package]
name = "agentflow-desktop"
edition.workspace = true
license.workspace = true
version.workspace = true

[build-dependencies]
tauri-build = { version = "=2.4.0", features = [] }

[dependencies]
agentflow-agent-bridge = { path = "../../../crates/agent-bridge" }
agentflow-agent-manual = { path = "../../../crates/agent-manual" }
agentflow-event-store = { path = "../../../crates/event-store" }
agentflow-panel = { path = "../../../crates/panel" }
agentflow-input = { path = "../../../crates/input" }
agentflow-mcp = { path = "../../../crates/mcp" }
agentflow-audit = { path = "../../../crates/audit" }
agentflow-projection = { path = "../../../crates/projection" }
agentflow-spec = { path = "../../../crates/spec" }
agentflow-state = { path = "../../../crates/state" }
agentflow-task-loop = { path = "../../../crates/task-loop" }
agentflow-workflow-events = { path = "../../../crates/workflow-events" }
anyhow.workspace = true
base64 = "0.22"
notify = "8"
rfd = "0.15"
serde.workspace = true
serde_json.workspace = true
tauri = { version = "=2.8.4", features = [] }

[dev-dependencies]
agentflow-workflow-acceptance = { path = "../../../crates/acceptance" }
tempfile.workspace = true
