[package]
name = "agentflow-desktop"
edition.workspace = true
license.workspace = true
version.workspace = true

[build-dependencies]
tauri-build = { version = "=2.4.0", features = [] }

[dependencies]
agentflow-agent-dispatcher = { path = "../../../crates/agent-dispatcher" }
agentflow-agent-manual = { path = "../../../crates/agent-manual" }
agentflow-event-store = { path = "../../../crates/event-store" }
agentflow-panel = { path = "../../../crates/panel" }
agentflow-mcp = { path = "../../../crates/mcp" }
agentflow-audit = { path = "../../../crates/audit" }
agentflow-projection = { path = "../../../crates/projection" }
agentflow-release = { path = "../../../crates/release" }
agentflow-runtime-api = { path = "../../../crates/runtime-api" }
agentflow-spec = { path = "../../../crates/spec" }
agentflow-state = { path = "../../../crates/state" }
agentflow-task-loop = { path = "../../../crates/task-loop" }
agentflow-workflow-core = { path = "../../../crates/workflow-core" }
anyhow.workspace = true
base64 = "0.22"
notify = "8"
rfd = "0.15"
serde.workspace = true
serde_json.workspace = true
tauri = { version = "=2.8.4", features = [] }

[dev-dependencies]
agentflow-workflow-acceptance = { path = "../../../crates/acceptance" }
tempfile.workspace = true
